src/snapshots/rust_aidl__parser__tests__method_with_javadoc.snap
---
source: src/parser.rs
expression: res

---
Method(
  oneway: false,
  name: "myMethod",
  return_type: Type(
    name: "void",
    kind: Void,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  args: [],
  annotations: [],
  doc: Some("Method documentation"),
  symbol_range: "...",
  full_range: "...",
)
