src/snapshots/rust_aidl__parser__tests__method_with_value.snap
---
source: src/parser.rs
expression: res

---
Method(
  oneway: false,
  name: "myMethod",
  return_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  args: [],
  annotations: [],
  doc: None,
  symbol_range: "...",
  full_range: "...",
)
