src/snapshots/rust_aidl__parser__tests__parcelable.snap
---
source: src/parser.rs
expression: res

---
Parcelable(
  name: "Tomato",
  members: [
    Member(
      name: "member1",
      member_type: Type(
        name: "int",
        kind: Primitive,
        generic_types: [],
        definition: None,
        symbol_range: "...",
      ),
      value: None,
      symbol_range: "...",
      doc: None,
      annotations: [],
      full_range: "...",
    ),
    Member(
      name: "member2",
      member_type: Type(
        name: "String",
        kind: String,
        generic_types: [],
        definition: None,
        symbol_range: "...",
      ),
      value: None,
      symbol_range: "...",
      doc: None,
      annotations: [],
      full_range: "...",
    ),
  ],
  annotations: [],
  doc: None,
  full_range: "...",
  symbol_range: "...",
)
