src/snapshots/rust_aidl__parser__tests__parcelable_with_javadoc.snap
---
source: src/parser.rs
expression: res

---
Parcelable(
  name: "Tomato",
  members: [],
  annotations: [],
  doc: Some("Parcelable documentation"),
  full_range: "...",
  symbol_range: "...",
)
