src/snapshots/rust_aidl__parser__tests__type_array-2.snap
---
source: src/parser.rs
expression: res

---
Type(
  name: "Array",
  kind: Invalid,
  generic_types: [
    Type(
      name: "String",
      kind: String,
      generic_types: [],
      definition: None,
      symbol_range: "...",
    ),
  ],
  definition: None,
  symbol_range: "...",
)
